@@ -42,6 +42,7 @@ FRONTEND
     Fixed: Cannot add DKIM/DMARC DNS resource records
     Fixed: Customer must be allowed to set custom TTL value for any DNS resource record
     Fixed: Customer must be allowed to set `name` field of any DNS resource record
+    Fixed: Could not remove database; There is no such grant defined for user...
     Fixed: IDNs are shown in IDNA form in SSL certificate management interface
     Fixed: iMSCP_Update_Database::addIndex() doesn't allows to set index length
     Removed: User deletion confirmation pages (admin/reseller level)
